# halo2-lib

./: .gitignore
halo2-base/: Cargo.toml
halo2-base/src/: lib.rs
halo2-ecc/: Cargo.toml
halo2-ecc/src/: lib.rs  verifier.rs
halo2-ecc/src/fields/: tests.rs
halo2-ecc/src/secp256k1/configs/: bench_ecdsa.config  bench_ecdsa_multi.config
halo2-ecc/src/secp256k1/tests/: ecdsa.rs  ecdsa_multi.rs  mod.rs
hashes/zkevm-keccak/: Cargo.toml
